Link and test license & organization microservices